--- a/src/Pages/Home/Auth/Form.css
+++ b/src/Pages/Home/Auth/Form.css
@@ -1,7 +1,7 @@
-.input-group input{
+.input-group input,textarea{
     width: 100%;
     font-size: 20px;
-    background-color: rgb(242, 241, 241);
+    background-color: #f2f1f1;
     padding: 6px 14px;
 }
 .input-btn input[type=submit]{
